welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:2: error: type mismatch;
 found   : Unit
 required: Boolean
  for (i <- 1 to 7) {
         ^Program:15: error: type mismatch;
 found   : Unit
 required: Boolean
  if (estSurBiscuit()) {
  ^